[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/list-deck/cooldown_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/list-deck/cannon_img.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/list-deck/item/item.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/img/border_no_transparent.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=6]

[node name="item" type="HBoxContainer"]
margin_right = 109.0
margin_bottom = 170.0
rect_min_size = Vector2( 150, 230 )
alignment = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="."]
margin_right = 141.0
margin_bottom = 230.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -66.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="ColorRect" parent="button"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_bottom = -1.0
rect_min_size = Vector2( 0, 60 )
color = Color( 1, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="button/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="button/PanelContainer/VBoxContainer"]
margin_right = 141.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="name" type="Label" parent="button/PanelContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 141.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "Cannon"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost" type="Label" parent="button/PanelContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 141.0
margin_bottom = 57.0
custom_colors/font_color = Color( 1, 0.756863, 0.027451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 6 )
text = "20/45"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="button/PanelContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 141.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 5 )

[node name="TextureProgress" type="TextureProgress" parent="button"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.533333 )
anchor_right = 1.0
anchor_bottom = 1.0
step = 0.1
value = 23.0
texture_progress = ExtResource( 2 )
fill_mode = 5
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hide" type="TextureRect" parent="button"]
visible = false
modulate = Color( 0, 0, 0, 0.682353 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="NinePatchRect" parent="button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
region_rect = Rect2( -14.1632, -10.0305, 510.48, 356.69 )
patch_margin_left = 34
patch_margin_top = 28
patch_margin_right = 31
patch_margin_bottom = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 145.0
margin_right = 150.0
margin_bottom = 230.0
rect_min_size = Vector2( 5, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween_tween_completed"]
